Complete the token after 7 days and login again.