@@ -1,11 +1,10 @@
 package com.aiolos.news.common.utils;
 
-import sun.misc.BASE64Encoder;
-
 import javax.servlet.ServletOutputStream;
 import javax.servlet.http.HttpServletResponse;
 import java.io.*;
 import java.net.URLDecoder;
+import java.util.Base64;
 
 /**
  * @author Aiolos
@@ -89,7 +88,8 @@ public class FileUtils {
         }
 
         // 对字节数组Base64编码并且返回
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(fileData);
+//        BASE64Encoder encoder = new BASE64Encoder();
+        Base64.Encoder encoder = Base64.getEncoder();
+        return encoder.encodeToString(fileData);
     }
 }
